add printing TuttiFrutti on console

--- a/array_lista/index_tuttifrutti.html
+++ b/array_lista/index_tuttifrutti.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- * DOM generality -->
-    <link rel="icon" href="assets/boolean-icon.png" type="icon/png">
+    <link rel="icon" href="../assets/boolean-icon.png" type="icon/png">
     <title>TuttiFrutti</title>
 
     <!-- * Local JS sheet -->
